[package]
name = "api-delay-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"

[dependencies]
actix-web = "4.2.1"
clap = { version = "4.1.0", features = ["derive", "color"] }
nix = "0.26.1"
thousands = "0.2.0"
tokio = "1.24.1"
