[package]
name = "api-delay-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[dependencies]
actix-web = "4.2.1"
clap = { version = "4.1.0", features = ["derive", "color"] }
thousands = "0.2.0"
tokio = "1.24.1"
rlimit = "0.9.0"