[package]
name = "api-delay-simulator"
version = "0.1.4"
edition = "2021"
authors = ["Felix Eckhardt"]

[profile.release]
strip = true
opt-level = "z"

[dependencies]
actix-web = "4.2.1"
clap = { version = "4.1.0", features = ["color", "cargo"] }
thousands = "0.2.0"
tokio = "1.24.1"
rlimit = "0.9.0"